--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "animejs": "^2.2.0",
+    "charming": "^2.2.3"
+  },
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
@@ -40,6 +43,7 @@
     "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-peer-deps-external": "^2.0.0",
     "rollup-plugin-postcss": "^1.1.0",
+    "rollup-plugin-scss": "^0.4.0",
     "rollup-plugin-url": "^1.3.0"
   },
   "files": [
