--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "standard",
-    "standard-react"
-  ],
+  "extends": ["standard", "standard-react"],
   "env": {
     "es6": true
   },
@@ -17,10 +14,9 @@
   "rules": {
     // don't force es6 functions to include space before paren
     "space-before-function-paren": 0,
-
     // allow specifying true explicitly for boolean props
     "react/jsx-boolean-value": 0,
-
+    "semi": ["error", "always"],
     // allow imports mixed with non-import statements at top of file
     "import/first": 0
   }
