--- a/package.json
+++ b/package.json
@@ -49,10 +49,16 @@
     "rollup-plugin-postcss": "^1.1.0",
     "rollup-plugin-scss": "^0.4.0",
     "rollup-plugin-url": "^1.3.0",
-    "sinon": "^4.5.0"
+    "sinon": "^4.5.0",
+    "svg.js": "^2.6.4",
+    "svgdom": "0.0.15"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "jest": {
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
