--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "animejs": "^2.2.0",
     "aphrodite": "^2.1.1",
-    "charming": "^2.2.3"
+    "charming": "^2.2.3",
+    "styled-components": "^3.2.5"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
